syntax = "proto3";

option csharp_namespace = "Orionexx.Proto";

package orionexx.identity;

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AccessTokenResponse {
  string AccessToken = 1;
  string RefreshToken = 2;
  string TokenType = 3;
  int64 ExpiresIn = 4;
}
