syntax = "proto3";

option csharp_namespace = "Orionexx.Proto";

package orionexx.identity;

message SignUpRequest {
  string email = 1;
  string password = 3;
}
